Update LeadCMS URL references from leadcms.io to leadcms.ai in documentation and tests

--- a/releases/v2.2.0.md
+++ b/releases/v2.2.0.md
@@ -85,7 +85,7 @@ $ npx leadcms init
 
 ⚠️  Configuration files already exist. Overwrite? (y/N): y
 
-Enter your LeadCMS URL [https://my-instance.leadcms.io]: ← Press Enter
+Enter your LeadCMS URL [https://my-instance.leadcms.ai]: ← Press Enter
 Default language code [en-US]: ← Press Enter
 Content directory [.leadcms/content]: ← Press Enter
 ```
