Refactor documentation and code to streamline authentication processes; remove unused examples and clarify environment variable handling.

--- a/releases/v2.2.0.md
+++ b/releases/v2.2.0.md
@@ -74,7 +74,7 @@ Would you like to authenticate now? (Y/n): y
 The init command now intelligently reads and reuses existing configuration values!
 
 **Improvements:**
-- **Existing Value Detection** - Reads from `.env`, `.env.local`, and `leadcms.config.json`
+- **Existing Value Detection** - Reads from `.env` and `leadcms.config.json`
 - **Smart Defaults** - Shows existing values in prompts with `[current-value]` format
 - **Press Enter to Keep** - Easy to reuse existing configuration
 - **Conditional Messaging** - Only shows "No API key found" if `.env` file exists
@@ -162,27 +162,23 @@ const commentTree = await getCommentsTreeForContent('my-article', 'blog-post', {
 
 ### New Authentication Library (`src/lib/auth.ts`)
 
-Extracted authentication logic into a reusable module:
+Extracted authentication logic into a reusable internal module:
 
-**Exported Functions:**
-```typescript
-import { 
-  authenticate,           // Complete auth flow with version detection
-  deviceAuthFlow,        // Device authentication (OAuth-like)
-  manualTokenFlow,       // Manual token extraction (legacy)
-  verifyToken,           // Verify API token
-  saveTokenToEnv,        // Save token to .env file
-  getLeadCMSVersion,     // Get instance version
-  compareVersions,       // Semver comparison
-  supportsDeviceAuth     // Check device auth support
-} from '@leadcms/sdk';
-```
+**Internal Functions (CLI use only):**
+- `authenticate()` - Complete auth flow with version detection
+- `deviceAuthFlow()` - Device authentication (OAuth-like)  
+- `manualTokenFlow()` - Manual token extraction (legacy)
+- `verifyToken()` - Verify API token
+- `saveTokenToEnv()` - Save token to .env file
+- `getLeadCMSVersion()` - Get instance version
+- `compareVersions()` - Semver comparison
+- `supportsDeviceAuth()` - Check device auth support
 
 **Key Features:**
 - Framework-agnostic design with dependency injection
 - Automatic version detection and flow selection
 - Supports LeadCMS >= 1.2.88 (device auth) and older versions (manual)
-- Can be used programmatically in custom integrations
+- **CLI-only access** - Use `npx leadcms login` instead of programmatic auth
 
 ### Refactored Scripts
 
@@ -303,8 +299,7 @@ npx leadcms pull
 ## 🗂️ New Files & Features
 
 ### Added
-- `src/lib/auth.ts` - Shared authentication library
-- `docs/AUTH_INTEGRATION.md` - Implementation documentation
+- `src/lib/auth.ts` - Shared authentication library (internal use only)
 - `releases/v2.2.0.md` - This release notes file
 - **Comments support** - Full API for fetching and managing comments
 - **CLI commands** - `pull-content`, `pull-comments`, `pull-media` for selective pulling
@@ -324,11 +319,10 @@ npx leadcms pull
 
 ## 📖 Documentation Updates
 
-- Added authentication API reference to main exports
 - Updated CLI command documentation
-- Added device authentication examples
+- Added device authentication examples  
 - Improved Quick Start guide in README
-- Added implementation details in `AUTH_INTEGRATION.md`
+- Removed programmatic auth API from public exports
 
 ## 🔒 Security
 
